Update: KDE setup
Added breeze-gtk theme and remove plasma-firewall since it is not working

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 - [ ] Update to accomodate searching of other partition
 - [ ] Have Barebone KDE to be usable
-    - [ ] Pipewire audio backend
+    - [x] Pipewire audio backend
+    - Need to check power deamon setup for Laptops and general config
 - [ ] Find way to possibly detect gpu and cpu vendor
 - [ ] return the efi setup
+- [ ] Regional fonts
